templates/styles.css
body {
	padding: 0;
	margin: 0;
}
#page-wrapper {
	position: absolute;
	min-height: 100%;
	width: 100%;
	
	display: grid;
	grid-template-rows: auto 1fr auto;
}
header > * {
	margin: 0;
	padding: 0;
}
#main {
	padding: 20px;
	margin: auto 0;
}
.wrapper {
	margin: 0;
	padding: 0;
}
#main .wrapper > * {
	width: 800px;
	max-width: 100%;
	margin: 0 auto;
}
#main #section-events,
#main .wrapper > #events-container {
    width: 100%;
}
.wrapper > * > :first-child {
	margin-top: 0;
}
.wrapper > :first-child {
	margin-top: 0;
}
.wrapper > :last-child {
	margin-bottom: 0;
}

body {
    font-family: Arial, sans-serif;
}

p {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

header a {
    text-decoration: none;
    color: inherit;
}

header {
	position: sticky;
	top: 0;
	background: white;
    padding: 10px;
	
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-areas: 
	"branding secondary"
	"main main";
}

header.sticky {
	display: flex;
	gap: 20px;
	background: white;
	z-index: 1;
}

header img.logo {
    max-height: 1.5em;
}
header.sticky img.logo {
    max-height: 1.0em;
}

#branding {
	grid-area: branding;
}
#nav-main {
	flex: 1;
	grid-area: main;
}
#nav-secondary {
	grid-area: secondary;
	text-align: right;
}

h1, #pagetitle {
	margin: 0;
}

nav ul {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    gap: 10px;
	margin: 0;
}
header:not(.sticky) nav ul,
header.sticky {
    padding: 10px;
    margin: 0;
    background-color: #f2f2f2;
    border: 1px solid #e7e7e7;
    border-radius: 5px;
}
header.sticky {
    border-radius: 0;
}

header.sticky nav ul {
	padding: 0;
}
nav > ul > li {
    flex: 1;
}
nav #subscribe-links {
	text-align: right;
}

#sltime-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: end;
}
#sltime-wrapper #sltime {
    font-size: 1em;
    font-family: "Courier New", Courier, monospace;
    font-family: "Menlo", "Consolas", "Liberation Mono", "DejaVu Sans Mono",  "Monaco", monospace, monospace;
}

#sltime-wrapper .label {
    font-size: smaller;
    opacity: 0.7;
}

footer {
    font-size: smaller;

    padding: 10px;
    text-align: center;
}

span.duration {
    font-size: small;
    opacity: 0.7;
}

.week {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 10px;
    margin: 10px 0;
}
.day {
	border: solid 1px lightgray;
	border-radius: 5px;
	
    flex: 1 0 100%;
    display: flex;
    flex-direction: column;
}
.day :first-child {
	margin-top: 0;
}
.day > * {
	padding-inline: 10px;
}
.day > h3 {
	background: lightgray;
	padding-block: 5px;
	margin: 0;
}
.day > h3 > :first-child {
    text-transform: capitalize;
}

/*.today, .today > h3 {
	background: green;
	background: lightgreen;
}*/

.event {
	min-width: 10em;
    overflow-wrap: break-word;

    display: grid;
    gap: 10px;
    padding-top: 10px;
    grid-template-columns: auto 3fr; /* Ajustez ces valeurs selon vos besoins */
    grid-template-areas: 
        "time title"
        "time description"
        "time teleport"
        "tags tags";
}

.event:not(:first-child) {
	border-top: solid 1px gray;
}

.event > * {
	margin: 0;
	display: block;
}
.event .time {
	font-size: 0.9em;
    grid-area: time;
}
.event .time span {
	display: grid;
}
.event .title {
    grid-area: title;
}

.event .description {
    grid-area: description;
}

.event .teleport {
    grid-area: teleport;
}

.event .tags {
    grid-area: tags;
    padding-block-end: 5px;
}

.disclaimer {
    font-size: smaller;
    opacity: 0.7;
    padding: 10px;
    margin: auto;
    max-width: 60em;
}
@media (min-width: 640px) {
    .day {
        flex: 1 0 calc(100% / 7);
    }
}

.list-check {
    list-style-type: none;
}

.list-check > [type=checkbox], 
.list-check > [type=radio] {
    margin: 0 0.2 0 -1.4em;
    vertical-align: middle;
}

.list-check input:disabled,
.list-check textarea:disabled,
.list-check input:disabled *,
.list-check textarea:disabled * {
	color: color-mix(in hsl, canvastext 100%, canvas) !important;
}

section {
    display: none;
}

#section-events {
    display: block;
}

nav li.section {
    cursor: pointer;
}

